[package]
name = "regressionu"
version = "0.1.0"
edition = "2021"
authors = ["Erik-Jan van de Wal"]
description = "A collection of connectors for the Binance Exchange"
repository = "https://github.com/erik404/regressionu/tree/master"
rust-version = "1.63.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
log = "0.4.20"