[package]
name = "regressionu"
version = "0.2.4"
edition = "2021"
authors = ["Erik-Jan van de Wal"]
description = "Regression implementation with perpetual update functionaility"
repository = "https://github.com/erik404/regressionu/tree/master"
rust-version = "1.63.0"
license-file = "LICENSE.txt"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }